--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an entrepreneur</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Originally from China</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Weight lifting.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Successful boss</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>North Carolina</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Accepting new challenge</p>
     </section>
 
     <footer id="footer">
